--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
       - restore_cache:
           keys:
             - "npm-packages"
-      - run: npm audit
+      #- run: npm audit
+      - run: npm audit fix
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
