--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,6 @@ jobs:
     steps:
       - checkout
       - run: npm i
-      - save_cache:
-          key: "npm-packages"
-          paths:
-            - /src/node_modules
       - run: npm run lint
   
   test:
@@ -22,9 +18,6 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - "npm-packages"
       - run: npm i
       - run: npm run test
 
@@ -33,11 +26,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - "npm-packages"
-      #- run: npm audit
-      - run: npm audit fix
+      - run: npm audit
+      #- run: npm audit fix
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
